gateway/security/policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt-for-all
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
#  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
  - to:
    - operation:
        paths: ["/*"]
  - to:
    - operation:
        paths: ["/chat*"]
